# bloch-sphere-simulator

./: README.md  application_state.py  bloch_frame.py  code_docs_header.md  engine_code_test.ipynb  gate.py  guide.md  main.py  pyproject.toml  settings_bar_frame.py  specification.md  state.py  study.md
docs/bloch_simulator/: gate.md  index.md  state.md
src/app/: application_state.py  bloch_frame.py  settings_bar_frame.py
src/bloch_simulator/: gate.py  state.py
